--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-youtube": "^10.1.0",
     "sugar-high": "^0.5.6"
   },
   "devDependencies": {
