--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.12.0",
@@ -17,6 +18,7 @@
     "@next/mdx": "^14.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.11",
+    "@vercel/postgres": "^0.7.2",
     "next": "14.1.0",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
@@ -32,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
